fix miniproduct overflow width and styles

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -85,8 +85,7 @@ ul input:focus {
 .menu span {
   height: 0.4rem;
   width: 100%;
-  background-color: var(--main-bg-color);
-  border: 1px solid var(--font-color);
+  background-color: var(--font-color);
   border-radius: 0.2rem;
 }
 
